Anpassungen von Felix und Ruben

--- a/satzung.tex
+++ b/satzung.tex
@@ -5,18 +5,18 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
-\usepackage{a4wide}
+\usepackage{geometry}
 \usepackage{fancyhdr}
 
 %======================================================
 % Config der Satzung, Leerzeichen am Ende sind wichtig!
 %======================================================
-\newcommand{\Verein}{Freifunk Nord } %Name des Vereins
-\newcommand{\Gdatum}{01.01.1900} %Gründungsdatum
-\newcommand{\Ort}{Kiel } %Sitz des Vereins
-\newcommand{\VorstandEins}{Freifunker 1}
-\newcommand{\VorstandZwei}{Freifunker 2}
-\newcommand{\Schatzmeister}{Freifunker 3}
+\newcommand{\Verein}{Freie Netze Nord } %Name des Vereins
+\newcommand{\Gdatum}{01.10.2015} %Gründungsdatum
+\newcommand{\Ort}{Kiel, Fraunhoferstr. 4-5, 24118 Kiel} %Sitz des Vereins
+\newcommand{\VorstandEins}{Ruben Barkow}
+\newcommand{\VorstandZwei}{Felix von Courten}
+\newcommand{\Schatzmeister}{Robert }
 %======================================================
 
 
@@ -45,13 +45,24 @@ Gründungssatzung vom \Gdatum \\
 
 \subsection*{§2 Zweck des Vereins, Gemeinnützigkeit, Auflösung und Vermögen}
 \begin{enumerate}
-\item Zweck des Vereins ist die Erforschung, Anwendung und Verbreitung freier Netzwerktechnologien sowie die Verbreitung und Vermittlung von Wissen über Funk \& Netzwerktechnologien. 
-\item Weiterhin fördert der Verein ideell, materiell und/oder finanziell: 
+\item Zweck des Vereins ist die Erforschung, Anwendung und Verbreitung freier Netzwerktechnologien sowie die Verbreitung und Vermittlung von Wissen über Funk \& Netzwerktechnologien;
+\item Weiterhin fördert der Verein ideell, materiell und/oder finanziell, insbesondere;
 \begin{itemize}
-\item den Zugang zur Informationstechnologie für sozial benachteiligte Personen 
-\item die Schaffung experimenteller Kommunikations- und Infrastrukturen sowie Bürgerdatennetzen. 
-\item Kulturelle, technologische und soziale Bildungs- und Forschungsobjekte
-\item die Veranstaltung regionaler, nationaler und internationaler Kongresse, Treffen und Konferenzen, sowie die Teilnahme der Mitglieder. 
+\item den Zugang zur Informationstechnologie für sozial benachteiligte Personen;
+\item die Schaffung experimenteller Kommunikations- und Infrastrukturen sowie Bürgerdatennetzen;
+\item Kulturelle, technologische und soziale Bildungs- und Forschungsobjekte;
+\item die Veranstaltung regionaler, nationaler und internationaler Kongresse, Treffen und Konferenzen, sowie die Teilnahme der Mitglieder;
+\item Förderung von Bildung und Wissenschaft durch die Schaffung eines öffentlichen Zugangs zu internationalen elektronischen Diskussionsforen und Datennetzen;
+\item Einführung in den Umgang mit internationalen Datennetzen;
+\item Fort- und Weiterbildung im Rahmen der Informations- und Kommunikationstechnologie;
+\item Zusammenwirken mit öffentlichen und privaten Bildungseinrichtungen (Universitäten, Hochschulen, Volkshochschulen etc.);
+\item Förderung der nationalen und internationalen Zusammenarbeit auf dem Gebiet der Informations- und Kommunikationstechnologie;
+\item der Verein stellt seine Arbeit der Öffentlichkeit zur Vertretung der ideellen Belange seiner Mitglieder dar:
+\begin{itemize}
+\item mittels Durchführung von öffentlichen Schulungen, Workshops und Anwenderseminaren und Vortragsreihen;
+\item durch Eigendarstellung in den Medien;
+\end{itemize}
+\item Durchführung von Forschungs- und Entwicklungsarbeiten.
 \end{itemize}
 \item Der Verein ist frei und unabhängig. Er verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im Sinne des Abschnitts „Steuerbegünstigte Zwecke“ der Abgabenordnung. Er ist selbstlos tätig und verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke. Die Mittel des Vereins dürfen nur für satzungsgemäße Zwecke verwendet werden. Es darf keine Person durch Ausgaben, die dem Vereinszweck fremd sind, oder durch unverhältnis hohe Vergütungen begünstigt werden. Die Mitglieder erhalten keine Zuwendungen aus den Mitteln des Vereins.
 \item Bei Auflösung der Körperschaft oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an Förderverein Freie Netze e.V. oder an eine andere steuerbegünstigte Körperschaft oder Körperschaft öffentlichen Rechts, welche es unmittelbar für gemeinnützige Zwecke verwenden darf. 
@@ -114,7 +125,15 @@ Gründungssatzung vom \Gdatum \\
 \end{enumerate}
 \end{enumerate}
 
-\subsection*{§5 Schlussbestimmung}
+
+\subsection*{§5 Haftung}
+\begin{enumerate}
+\item Der Verein Haftet nur in Höhe seines Besitzes und Vermögens.
+\item Die Organe und Mitglieder haften nur in Höhe Ihrer Einlagen
+\item Mitglieder des Vorstands haften dem Verein nur für grob fahrlässige und vorsätzliche Schädigung
+\end{enumerate}
+
+\subsection*{§6 Schlussbestimmung}
 \begin{enumerate}
 \item Der Vorstand ist befugt, redaktionelle Änderungen an dieser Satzung, sofern sie einer Auflage des Registergerichtes oder einer Behörde entsprechen müssen, durchzuführen.
 \end{enumerate}
