--- a/satzung.tex
+++ b/satzung.tex
@@ -11,12 +11,13 @@
 %======================================================
 % Config der Satzung, Leerzeichen am Ende sind wichtig!
 %======================================================
-\newcommand{\Verein}{Freie Netze Nord } %Name des Vereins
-\newcommand{\Gdatum}{01.10.2015} %Gründungsdatum
-\newcommand{\Ort}{Kiel, Fraunhoferstr. 4-5, 24118 Kiel} %Sitz des Vereins
+\newcommand{\Verein}{Freie Netze Nord} %Name des Vereins
+\newcommand{\Gdatum}{01.11.2015} %Gründungsdatum
+\newcommand{\Ort}{Kiel} %Sitz des Vereins
+\newcommand{\Adresse}{Fraunhoferstr. 4-5, 24118 Kiel}
 \newcommand{\VorstandEins}{Ruben Barkow}
 \newcommand{\VorstandZwei}{Felix von Courten}
-\newcommand{\Schatzmeister}{Robert }
+\newcommand{\Schatzmeister}{Robert Jacobsen}
 %======================================================
 
 
@@ -37,8 +38,8 @@ Gründungssatzung vom \Gdatum \\
 \bigskip
 \subsection*{§1 Name und Sitz des Vereins}
 \begin{enumerate}
-\item Der Verein führt den Namen „\Verein“ ( im folgenden Verein genannt) 
-\item Der Sitz des Vereines ist \Ort 
+\item Der Verein führt den Namen „\Verein“ (im folgenden Verein genannt) 
+\item Der Sitz des Vereins ist \Ort, \Adresse
 \item Der Verein ist in das Vereinsregister der Stadt \Ort einzutragen und trägt danach den Namen „\Verein e.V.“ 
 \item Das Geschäftsjahr des Vereins ist das Kalenderjahr.
 \end{enumerate}
@@ -46,7 +47,7 @@ Gründungssatzung vom \Gdatum \\
 \subsection*{§2 Zweck des Vereins, Gemeinnützigkeit, Auflösung und Vermögen}
 \begin{enumerate}
 \item Zweck des Vereins ist die Erforschung, Anwendung und Verbreitung freier Netzwerktechnologien sowie die Verbreitung und Vermittlung von Wissen über Funk \& Netzwerktechnologien;
-\item Weiterhin fördert der Verein ideell, materiell und/oder finanziell, insbesondere;
+\item Weiterhin fördert der Verein ideell, materiell und/oder finanziell, insbesondere:
 \begin{itemize}
 \item den Zugang zur Informationstechnologie für sozial benachteiligte Personen;
 \item die Schaffung experimenteller Kommunikations- und Infrastrukturen sowie Bürgerdatennetzen;
