Leerzeichen bei Variablen, überarbeitung erster Satzung

--- a/satzung.tex
+++ b/satzung.tex
@@ -25,22 +25,22 @@
 % Ab hier muss nichts mehr geändert werden
 %======================================================
 
-\title{Satzung \Verein e.V.}
+\title{Satzung {\Verein} e.V.}
 
 \begin{document}
 \pagestyle{fancy}
-\chead{Satzung \Verein e.V.}
+\chead{Satzung {\Verein} e.V.}
 \begin{center}
-\section*{Satzung \\ \Verein e.V.}
-Gründungssatzung vom \Gdatum \\
+\section*{Satzung \\ {\Verein} e.V.}
+Gründungssatzung vom {\Gdatum} \\
 %in der geänderten Fassung vom 27.05.2011 (§4 Absatz 2, §4 Absatz 6 Ziffer 1)
 \end{center}
 \bigskip
 \subsection*{§1 Name und Sitz des Vereins}
 \begin{enumerate}
-\item Der Verein führt den Namen „\Verein“ (im folgenden Verein genannt) 
-\item Der Sitz des Vereins ist \Ort, \Adresse
-\item Der Verein ist in das Vereinsregister der Stadt \Ort einzutragen und trägt danach den Namen „\Verein e.V.“ 
+\item Der Verein führt den Namen „{\Verein}“.
+\item Der Verein hat seinen Sitz in {\Ort}.
+\item Der Verein ist in das Vereinsregister einzutragen und trägt danach den Namen „{\Verein} e.V.“.
 \item Das Geschäftsjahr des Vereins ist das Kalenderjahr.
 \end{enumerate}
 
@@ -122,7 +122,7 @@ Gründungssatzung vom \Gdatum \\
 \item Die Vorstandsmitglieder üben ihr Amt ehrenamtlich aus.
 \item Dem Vorstand obliegen die laufende Geschäftsführung, die Ausführung der Beschlüsse der Mitgliederversammlung und die Verwaltung des Vereinsvermögens.
 \item Der Vorstand kann zur Unterstützung und Wahrnehmung seiner Aufgaben Vereinsmitglieder berufen, die entweder auf Dauer oder nur zur Erfüllung einer zeitlich begrenzten Tätigkeit Funktionen übernehmen.
-\item Der Vorstand tagt mindestens einmal halbjährlich. Jedes Mitglied hat das Recht, an den Sitzungen des Vorstands teilzunehmen. Die Ergebnisse der Sitzungen sind zu Satzung \Verein e.V. dokumentieren und zeitnah zu veröffentlichen.
+\item Der Vorstand tagt mindestens einmal halbjährlich. Jedes Mitglied hat das Recht, an den Sitzungen des Vorstands teilzunehmen. Die Ergebnisse der Sitzungen sind zu Satzung {\Verein} e.V. dokumentieren und zeitnah zu veröffentlichen.
 \end{enumerate}
 \end{enumerate}
 
