--- a/satzung.tex
+++ b/satzung.tex
@@ -129,9 +129,9 @@ Gründungssatzung vom {\Gdatum} \\
 
 \subsection*{§5 Haftung}
 \begin{enumerate}
-\item Der Verein Haftet nur in Höhe seines Besitzes und Vermögens.
-\item Die Organe und Mitglieder haften nur in Höhe Ihrer Einlagen
-\item Mitglieder des Vorstands haften dem Verein nur für grob fahrlässige und vorsätzliche Schädigung
+\item Der Verein haftet nur in Höhe seines Besitzes und Vermögens.
+\item Die Organe und Mitglieder haften nur in Höhe Ihrer Einlagen.
+\item Mitglieder des Vorstands haften dem Verein gegenüber nur für grob fahrlässige und vorsätzliche Schädigung.
 \end{enumerate}
 
 \subsection*{§6 Schlussbestimmung}
