--- a/satzung.tex
+++ b/satzung.tex
@@ -104,9 +104,9 @@ Gründungssatzung vom {\Gdatum} \\
 \item Entlastung des Vorstands
 \item Wahl der Vorstandsmitglieder
 \item Beschlussfassung über Satzungsänderungen
-\item eine Änderung des Zweckes des Vereins oder der diesbezüglichen Satzungsbestimmungen ist lediglich unter Beachtung der Vorschriften gemäß §2, Gemeinnützigkeit, möglich, 
+\item eine Änderung des Zweckes des Vereins oder der diesbezüglichen Satzungsbestimmungen ist lediglich unter Beachtung der Vorschriften gemäß §~2, Gemeinnützigkeit, möglich,
 \item Festsetzung der Mitgliedsbeiträge, 
-\item die Auflösung des Vereins gemäß §2, Ziffer 4 und 6 dieser Satzung. 
+\item die Auflösung des Vereins gemäß §~2, Ziffer 4 und 6 dieser Satzung.
 \end{enumerate}
 \item Fristen: 
 \begin{enumerate}
@@ -116,7 +116,7 @@ Gründungssatzung vom {\Gdatum} \\
 \end{enumerate}
 \item Der Vorstand
 \begin{enumerate}
-\item Der Vorstand des Vereins besteht aus drei Personen: Der 1. Vorsitzende, der 2. Vorsitzende und der Schatzmeister sind Vorstand im Sinne des § 26 des Bürgerlichen Gesetzbuches. Jeder von ihnen vertritt allein den Verein gerichtlich und außergerichtlich.
+\item Der Vorstand des Vereins besteht aus drei Personen: Der 1. Vorsitzende, der 2. Vorsitzende und der Schatzmeister sind Vorstand im Sinne des §~26 des Bürgerlichen Gesetzbuches. Jeder von ihnen vertritt allein den Verein gerichtlich und außergerichtlich.
 \item Der Vorstand wird auf die Dauer von jeweils zwei Jahren gewählt. Nach Ablauf dieser Zeit bleibt er bis zur Wahl eines neues Vorstands kommissarisch im Amt.
 \item Scheidet ein Vorstandsmitglied während der Amtszeit aus, so haben die übrigen Vorstandsmitglieder eine Ergänzung herbeizuführen, die der Bestätigung durch die nächste Mitgliederversammlung bedarf.
 \item Die Vorstandsmitglieder üben ihr Amt ehrenamtlich aus.
