Name in "Offene Netze Nord" geändert

--- a/satzung.tex
+++ b/satzung.tex
@@ -11,7 +11,7 @@
 %======================================================
 % Config der Satzung, Leerzeichen am Ende sind wichtig!
 %======================================================
-\newcommand{\Verein}{Freie Netze Nord} %Name des Vereins
+\newcommand{\Verein}{Offene Netze Nord} %Name des Vereins
 \newcommand{\Gdatum}{01.11.2015} %Gründungsdatum
 \newcommand{\Ort}{Kiel} %Sitz des Vereins
 \newcommand{\Adresse}{Fraunhoferstr. 4-5, 24118 Kiel}
