Änderungen des Plenums

--- a/satzung.tex
+++ b/satzung.tex
@@ -14,7 +14,6 @@
 \newcommand{\Verein}{Offene Netze Nord} %Name des Vereins
 \newcommand{\Gdatum}{01.11.2015} %Gründungsdatum
 \newcommand{\Ort}{Kiel} %Sitz des Vereins
-\newcommand{\Adresse}{Fraunhoferstr. 4-5, 24118 Kiel}
 \newcommand{\VorstandEins}{Ruben Barkow}
 \newcommand{\VorstandZwei}{Felix von Courten}
 \newcommand{\Schatzmeister}{Robert Jacobsen}
@@ -36,7 +35,7 @@ Gründungssatzung vom {\Gdatum} \\
 %in der geänderten Fassung vom 27.05.2011 (§4 Absatz 2, §4 Absatz 6 Ziffer 1)
 \end{center}
 \bigskip
-\subsection*{§1 Name und Sitz des Vereins}
+\subsection*{§\,1 Name und Sitz des Vereins}
 \begin{enumerate}
 \item Der Verein führt den Namen „{\Verein}“.
 \item Der Verein hat seinen Sitz in {\Ort}.
@@ -44,59 +43,58 @@ Gründungssatzung vom {\Gdatum} \\
 \item Das Geschäftsjahr des Vereins ist das Kalenderjahr.
 \end{enumerate}
 
-\subsection*{§2 Zweck des Vereins, Gemeinnützigkeit, Auflösung und Vermögen}
+\subsection*{§\,2 Zweck des Vereins, Gemeinnützigkeit, Auflösung und Vermögen}
 \begin{enumerate}
-\item Zweck des Vereins ist die Erforschung, Anwendung und Verbreitung freier Netzwerktechnologien sowie die Verbreitung und Vermittlung von Wissen über Funk \& Netzwerktechnologien;
-\item Weiterhin fördert der Verein ideell, materiell und/oder finanziell, insbesondere:
+\item Zweck des Vereins ist die Erforschung, Anwendung und Verbreitung freier Netzwerktechnologien sowie die Verbreitung und Vermittlung von Wissen über Funk- und Netzwerktechnologien.
+\item Hierzu fördert der Verein ideell, materiell und finanziell insbesondere:
 \begin{itemize}
-\item den Zugang zur Informationstechnologie für sozial benachteiligte Personen;
-\item die Schaffung experimenteller Kommunikations- und Infrastrukturen sowie Bürgerdatennetzen;
-\item Kulturelle, technologische und soziale Bildungs- und Forschungsobjekte;
-\item die Veranstaltung regionaler, nationaler und internationaler Kongresse, Treffen und Konferenzen, sowie die Teilnahme der Mitglieder;
-\item Förderung von Bildung und Wissenschaft durch die Schaffung eines öffentlichen Zugangs zu internationalen elektronischen Diskussionsforen und Datennetzen;
-\item Einführung in den Umgang mit internationalen Datennetzen;
-\item Fort- und Weiterbildung im Rahmen der Informations- und Kommunikationstechnologie;
-\item Zusammenwirken mit öffentlichen und privaten Bildungseinrichtungen (Universitäten, Hochschulen, Volkshochschulen etc.);
-\item Förderung der nationalen und internationalen Zusammenarbeit auf dem Gebiet der Informations- und Kommunikationstechnologie;
+\item den Zugang zu Informationstechnologie für sozial benachteiligte Personen,
+\item die Schaffung experimenteller Kommunikations- und Infrastrukturen sowie Bürgerdatennetze,
+\item kulturelle, technologische und soziale Bildungs- und Forschungsobjekte,
+\item Einführung in den Umgang mit internationalen Datennetzen,
+\item Fort- und Weiterbildung im Rahmen der Informations- und Kommunikationstechnologie,
+\item Zusammenwirken mit öffentlichen und privaten Bildungseinrichtungen (Universitäten, Hochschulen, Volkshochschulen etc.),
+\item Förderung der nationalen und internationalen Zusammenarbeit auf dem Gebiet der Informations- und Kommunikationstechnologie,
 \item der Verein stellt seine Arbeit der Öffentlichkeit zur Vertretung der ideellen Belange seiner Mitglieder dar:
 \begin{itemize}
-\item mittels Durchführung von öffentlichen Schulungen, Workshops und Anwenderseminaren und Vortragsreihen;
-\item durch Eigendarstellung in den Medien;
+\item mittels Durchführung von öffentlichen Schulungen, Workshops und Anwenderseminaren und Vortragsreihen,
+\item durch Eigendarstellung in den Medien,
 \end{itemize}
 \item Durchführung von Forschungs- und Entwicklungsarbeiten.
 \end{itemize}
 \item Der Verein ist frei und unabhängig. Er verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im Sinne des Abschnitts „Steuerbegünstigte Zwecke“ der Abgabenordnung. Er ist selbstlos tätig und verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke. Die Mittel des Vereins dürfen nur für satzungsgemäße Zwecke verwendet werden. Es darf keine Person durch Ausgaben, die dem Vereinszweck fremd sind, oder durch unverhältnis hohe Vergütungen begünstigt werden. Die Mitglieder erhalten keine Zuwendungen aus den Mitteln des Vereins.
 \item Bei Auflösung der Körperschaft oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an Förderverein Freie Netze e.V. oder an eine andere steuerbegünstigte Körperschaft oder Körperschaft öffentlichen Rechts, welche es unmittelbar für gemeinnützige Zwecke verwenden darf. 
 \item Ausscheidende Mitglieder haben keinen Anspruch auf das Vereinsvermögen. 
-\item Über die Auflösung des Vereines entscheidet eine Mitgliederversammlung, die eigens zu diesem Zweck einberufen wird. Die Auflösung gilt als beschlossen wenn 75 von 100 der abgegebenen Stimmen dafür stimmen. 
+\item Über die Auflösung des Vereines entscheidet eine Mitgliederversammlung, die eigens zu diesem Zweck einberufen wird. Die Auflösung gilt als beschlossen wenn dreiviertel der abgegebenen Stimmen dafür stimmen. 
 \end{enumerate}
 
-\subsection*{§3 Mitgliedschaft}
+\subsection*{§\,3 Mitgliedschaft}
 \begin{enumerate}
-\item Mitglieder können natürliche und juristische Personen, z. B. Firmen, Vereine, Verbände und Behörden werden, die gewillt sind, die gemeinnützigen Ziele des Vereins zu fördern und diesen in der Durchführung seiner Aufgaben zu unterstützen. Körperschaften, Vereine und Verbände können die Mitgliedschaft entweder nur für sich selbst oder auch für ihre Mitglieder erwerben. Bei Minderjährigen ist die Zustimmung des gesetzlichen Vertreters erforderlich.
+\item Mitglieder können natürliche und juristische Personen werden, die gewillt sind, die gemeinnützigen Ziele des Vereins zu fördern und diesen in der Durchführung seiner Aufgaben zu unterstützen. Körperschaften, Vereine und Verbände können die Mitgliedschaft entweder nur für sich selbst oder auch für ihre Mitglieder erwerben. Bei Minderjährigen ist die Zustimmung des gesetzlichen Vertreters erforderlich.
 \begin{enumerate}
-\item Der Aufnahmeantrag ist schriftlich, auch in elektronischer Form, an den Vorstand zu richten, der über die Aufnahme des Antragstellers entscheidet.
+\item Der Aufnahmeantrag ist in Textform an den Vorstand zu richten, der über die Aufnahme des Antragstellers entscheidet.
 \item Das aufgenommene Mitglied erhält eine Kopie der Satzung. Die jeweils aktuelle Satzung wird darüber hinaus an geeigneter Stelle den Mitgliedern verfügbar gemacht.
 \item Der Beitritt gilt erst dann als vollzogen, wenn der Mitgliedsbeitrag entrichtet worden ist.
 \item Die Mitglieder haben das Recht, an der Mitgliederversammlung des Vereins teilzunehmen, Anträge zu stellen, und das Stimmrecht auszuüben. Juristische Personen üben ihr Stimmrecht durch bevollmächtigte Vertreter aus. Das aktive Stimmrecht besitzen Mitglieder mit Erreichen des 16. Lebensjahrs. Das passive Wahlrecht beginnt mit Erreichen des 18. Lebensjahrs.
 \item Jedes Mitglied hat einen Jahresbeitrag zu leisten, dessen Höhe und Fälligkeit in der Finanzordnung festgehalten sind. Diese wird von der Mitgliederversammlung beschlossen.
 \item Der Vorstand kann der Mitgliederversammlung die Ernennung von Ehrenmitgliedern vorschlagen. Ehrenmitglieder sind von Beitragszahlungen freigestellt und haben auf Mitgliederversammlungen volles Stimmrecht.
-\item Auf Antrag kann der Vorstand Mitgliedsbeiträge stunden und ganz oder teilweise erlassen.
+\item Im begründeten Einzelfall kann für ein Mitglied durch Vorstandsbeschluss ein von der Beitragsordnung abweichender Beitrag festgesetzt werden.
 \item Die Mitgliedschaft endet durch Austritt, Ausschluss oder Tod.
-\item Der Austritt muss durch schriftliche Mitteilung an den Vorstand erklärt werden. Er wird mit Endes des Geschäftsjahrs wirksam und muss sechs Wochen vor dessen Ablauf mitgeteilt worden sein. Auf Wunsch des Mitglieds kann die Wirksamkeit auch mit sofortiger Wirkung eintreten.
+\item Der Austritt muss durch Mitteilung in Textform an den Vorstand erklärt werden. Er wird mit Endes des Geschäftsjahrs wirksam und muss sechs Wochen vor dessen Ablauf mitgeteilt worden sein. Auf Wunsch des Mitglieds kann die Wirksamkeit auch mit sofortiger Wirkung eintreten.
 \item Der Ausschluss erfolgt durch den Vorstand. Der Ausgeschlossene kann innerhalb eines Monats nach Zugang des Beschlusses Einspruch einlegen und die nächste Mitgliederversammlung anrufen, von der die Gültigkeit des Ausschlusses mit Dreiviertelmehrheit der anwesenden Mitglieder bestätigt oder der Ausschluss rückgängig gemacht werden kann. Vom Zeitpunkt des Einspruchs bis zur Entscheidung über den Ausschluss besteht die Mitgliedschaft weiter.
+\item Im Falle nicht fristgerechter Entrichtung der Beiträge ruht die Mitgliedschaft.
 \end{enumerate}
 \end{enumerate}
 
-\subsection*{§4 Organe des Vereins}
+\subsection*{§\,4 Organe des Vereins}
 \begin{enumerate}
 \item Die Mitgliederversammlung
 \begin{enumerate}
 \item Die ordentliche Mitgliederversammlung findet einmal jährlich statt.
-\item Der Vorstand hat eine außerordentliche Mitgliederversammlung unverzüglich und unter genauer Angabe von Gründen einzuberufen, wenn es das Interesse des Vereins erfordert oder wenn mindestens 10\% der Mitglieder dies schriftlich unter Angabe des Zwecks und der Gründe vom Vorstand verlangen.
+\item Der Vorstand hat eine außerordentliche Mitgliederversammlung unverzüglich und unter genauer Angabe von Gründen einzuberufen, wenn es das Interesse des Vereins erfordert oder wenn mindestens 25\% der Mitglieder dies schriftlich unter Angabe des Zwecks und der Gründe vom Vorstand verlangen.
 \item Die Leitung der Versammlung hat ein Mitglied des Vorstands oder ein von der Mitgliederversammlung bestimmter Versammlungsleiter.
 \item Die Beschlüsse der Mitgliederversammlung werden in einem Protokoll niedergelegt und mit den Unterschriften des Versammlungsleiters und des Protokollführers beurkundet.
-\item Der Mitgliederversammlung obliegen:
+\item Der Mitgliederversammlung obliegen insbesondere:
 \begin{enumerate}
 \item Beschlussfassung über alle den Verein betreffenden Angelegenheiten von grundsätzlicher Bedeutung
 \item Entscheidung über fristgemäß eingebrachte Anträge
@@ -104,40 +102,36 @@ Gründungssatzung vom {\Gdatum} \\
 \item Entlastung des Vorstands
 \item Wahl der Vorstandsmitglieder
 \item Beschlussfassung über Satzungsänderungen
-\item eine Änderung des Zweckes des Vereins oder der diesbezüglichen Satzungsbestimmungen ist lediglich unter Beachtung der Vorschriften gemäß §~2, Gemeinnützigkeit, möglich,
+\item eine Änderung des Zwecks des Vereins oder der diesbezüglichen Satzungsbestimmungen ist lediglich unter Beachtung der Vorschriften gemäß §\,2, Gemeinnützigkeit, möglich,
 \item Festsetzung der Mitgliedsbeiträge, 
-\item die Auflösung des Vereins gemäß §~2, Ziffer 4 und 6 dieser Satzung.
+\item die Auflösung des Vereins gemäß §\,2, Ziffer 4 und 6 dieser Satzung.
 \end{enumerate}
 \item Fristen: 
 \begin{enumerate}
-\item Die Versammlung wird mindestens acht Wochen vor dem Versammlungstermin mit einer schriftlichen Mitteilung an die Mitglieder angekündigt.
+\item Die Versammlung wird mindestens acht Wochen vor dem Versammlungstermin mit einer Mitteilung in Textform an die Mitglieder angekündigt.
 \item Ein Antrag an die Mitgliederversammlung gilt als fristgemäß eingereicht, wenn er zwei Wochen vor Beginn der Mitgliederversammlung beim Vorstand eingegangen ist.
 \end{enumerate}
 \end{enumerate}
 \item Der Vorstand
 \begin{enumerate}
-\item Der Vorstand des Vereins besteht aus drei Personen: Der 1. Vorsitzende, der 2. Vorsitzende und der Schatzmeister sind Vorstand im Sinne des §~26 des Bürgerlichen Gesetzbuches. Jeder von ihnen vertritt allein den Verein gerichtlich und außergerichtlich.
+\item Der Vorstand des Vereins besteht aus drei Personen: Der 1. Vorsitzende, der 2. Vorsitzende und der Schatzmeister sind Vorstand im Sinne des §\,26 des Bürgerlichen Gesetzbuches. Jeder von ihnen vertritt allein den Verein gerichtlich und außergerichtlich.
 \item Der Vorstand wird auf die Dauer von jeweils zwei Jahren gewählt. Nach Ablauf dieser Zeit bleibt er bis zur Wahl eines neues Vorstands kommissarisch im Amt.
 \item Scheidet ein Vorstandsmitglied während der Amtszeit aus, so haben die übrigen Vorstandsmitglieder eine Ergänzung herbeizuführen, die der Bestätigung durch die nächste Mitgliederversammlung bedarf.
 \item Die Vorstandsmitglieder üben ihr Amt ehrenamtlich aus.
 \item Dem Vorstand obliegen die laufende Geschäftsführung, die Ausführung der Beschlüsse der Mitgliederversammlung und die Verwaltung des Vereinsvermögens.
 \item Der Vorstand kann zur Unterstützung und Wahrnehmung seiner Aufgaben Vereinsmitglieder berufen, die entweder auf Dauer oder nur zur Erfüllung einer zeitlich begrenzten Tätigkeit Funktionen übernehmen.
-\item Der Vorstand tagt mindestens einmal halbjährlich. Jedes Mitglied hat das Recht, an den Sitzungen des Vorstands teilzunehmen. Die Ergebnisse der Sitzungen sind zu Satzung {\Verein} e.V. dokumentieren und zeitnah zu veröffentlichen.
+\item Der Vorstand tagt mindestens einmal halbjährlich. Jedes Mitglied hat das Recht, an den Sitzungen des Vorstands teilzunehmen. Die Ergebnisse der Sitzungen sind zu protokollieren und zeitnah den Mitgliedern zugänglich zu machen.
 \end{enumerate}
 \end{enumerate}
 
 
-\subsection*{§5 Haftung}
+\subsection*{§\,5 Haftung}
 \begin{enumerate}
 \item Der Verein haftet nur in Höhe seines Besitzes und Vermögens.
 \item Die Organe und Mitglieder haften nur in Höhe Ihrer Einlagen.
 \item Mitglieder des Vorstands haften dem Verein gegenüber nur für grob fahrlässige und vorsätzliche Schädigung.
 \end{enumerate}
 
-\subsection*{§6 Schlussbestimmung}
-\begin{enumerate}
-\item Der Vorstand ist befugt, redaktionelle Änderungen an dieser Satzung, sofern sie einer Auflage des Registergerichtes oder einer Behörde entsprechen müssen, durchzuführen.
-\end{enumerate}
 \bigskip
 \begin{center}
 
