Wau Holland Stiftung als Vermögens nachfolger

--- a/satzung.tex
+++ b/satzung.tex
@@ -63,7 +63,7 @@ Gründungssatzung vom {\Gdatum} \\
 \item Durchführung von Forschungs- und Entwicklungsarbeiten.
 \end{itemize}
 \item Der Verein ist frei und unabhängig. Er verfolgt ausschließlich und unmittelbar gemeinnützige Zwecke im Sinne des Abschnitts „Steuerbegünstigte Zwecke“ der Abgabenordnung. Er ist selbstlos tätig und verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke. Die Mittel des Vereins dürfen nur für satzungsgemäße Zwecke verwendet werden. Es darf keine Person durch Ausgaben, die dem Vereinszweck fremd sind, oder durch unverhältnis hohe Vergütungen begünstigt werden. Die Mitglieder erhalten keine Zuwendungen aus den Mitteln des Vereins.
-\item Bei Auflösung der Körperschaft oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an Förderverein Freie Netze e.V. oder an eine andere steuerbegünstigte Körperschaft oder Körperschaft öffentlichen Rechts, welche es unmittelbar für gemeinnützige Zwecke verwenden darf. 
+\item Bei Auflösung der Körperschaft oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an die Wau Holland Stiftung oder an eine andere steuerbegünstigte Körperschaft oder Körperschaft öffentlichen Rechts, welche es unmittelbar für gemeinnützige Zwecke verwenden darf. 
 \item Ausscheidende Mitglieder haben keinen Anspruch auf das Vereinsvermögen. 
 \item Über die Auflösung des Vereines entscheidet eine Mitgliederversammlung, die eigens zu diesem Zweck einberufen wird. Die Auflösung gilt als beschlossen wenn dreiviertel der abgegebenen Stimmen dafür stimmen. 
 \end{enumerate}
